--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,43 +8,28 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:id="@+id/selectedDay"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
-
-    <TextView
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:id="@+id/selectedMonth"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
-
-    <TextView
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:id="@+id/selectedYear"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
-
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <Button
-        android:id="@+id/saveTextButton"
+    <LinearLayout
+        android:id="@+id/dayContent"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="save text"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-
-    <EditText
-        android:hint="write something"
-        android:id="@+id/textInput"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textColor="@color/black"/>
+        <EditText
+            android:hint="write something"
+            android:id="@+id/textInput"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textColor="@color/black"/>
+        <Button
+            android:id="@+id/saveTextButton"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="save text"/>
+    </LinearLayout>
 </LinearLayout>
