--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,16 @@
         android:orientation="horizontal">
 
         <EditText
-            android:hint="write something"
             android:id="@+id/textInput"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="40dp"
+            android:hint="write something"
             android:textColor="@color/black"/>
+
         <Button
             android:id="@+id/saveTextButton"
-            android:layout_width="match_parent"
+            android:layout_width="60dp"
             android:layout_height="40dp"
             android:text="save text"/>
     </LinearLayout>
