--- a/app/src/main/res/layout/layout_forgot_password.xml
+++ b/app/src/main/res/layout/layout_forgot_password.xml
@@ -9,7 +9,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lựa chọn và trả lời câu hoi"
+        android:text="Lựa chọn và trả lời đúng câu hoi"
+        android:textAlignment="center"
+        android:textColor="#8D4B35"
+        android:textSize="14sp"
+        android:textStyle="italic" />
 
 
 </LinearLayout>
