--- a/app/src/main/res/layout/layout_forgot_password.xml
+++ b/app/src/main/res/layout/layout_forgot_password.xml
@@ -15,5 +15,12 @@
         android:textSize="14sp"
         android:textStyle="italic" />
 
+    <EditText
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/txtOldPass"
+    android:textSize="18sp"
+    android:textColor="#000000"
+    android:password="true"/>
 
 </LinearLayout>
