--- a/app/src/main/res/layout/layout_forgot_password.xml
+++ b/app/src/main/res/layout/layout_forgot_password.xml
@@ -15,12 +15,17 @@
         android:textSize="14sp"
         android:textStyle="italic" />
 
-    <EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/txtOldPass"
-    android:textSize="18sp"
-    android:textColor="#000000"
-    android:password="true"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Câu hỏi số 1"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="14sp"/>
+    <Spinner
+        android:id="@+id/fspnQuestion1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
